--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "prop-types": "15.6.1",
     "react": "^16.2.0",
     "react-apollo": "2.1.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "styled-components": "^3.2.6"
   },
   "author": "",
   "license": "ISC"
