--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "with-apollo",
-  "version": "2.0.0",
+  "name": "app",
+  "version": "0.0.1",
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
@@ -9,17 +9,17 @@
   "dependencies": {
     "@blueprintjs/core": "^2.2.1",
     "@zeit/next-css": "^0.1.5",
-    "apollo-boost": "^0.1.3",
-    "graphql": "0.13.2",
+    "apollo-boost": "^0.1.4",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
-    "isomorphic-unfetch": "2.0.0",
+    "isomorphic-unfetch": "^2.0.0",
     "material-ui": "^0.20.0",
-    "next": "5.1.0",
+    "next": "^5.1.0",
     "next-routes": "^1.4.1",
-    "prop-types": "15.6.1",
-    "react": "^16.2.0",
-    "react-apollo": "2.1.0",
-    "react-dom": "^16.2.0"
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-apollo": "^2.1.3",
+    "react-dom": "^16.3.2"
   },
   "author": "",
   "license": "ISC"
