--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "server",
+  "version": "0.0.1",
   "scripts": {
     "start": "node src/index.js",
     "dev": "npm-run-all --parallel start playground",
@@ -7,12 +8,12 @@
     "prisma": "prisma"
   },
   "dependencies": {
-    "graphql-yoga": "1.8.5",
-    "prisma-binding": "1.5.17"
+    "graphql-yoga": "^1.13.0",
+    "prisma-binding": "^1.5.18"
   },
   "devDependencies": {
-    "graphql-cli": "2.15.9",
-    "npm-run-all": "4.1.2",
-    "prisma": "1.6.3"
+    "graphql-cli": "^2.15.13",
+    "npm-run-all": "^4.1.2",
+    "prisma": "^1.7.3"
   }
 }
