--- a/app/package.json
+++ b/app/package.json
@@ -19,9 +19,13 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-apollo": "^2.1.3",
+    "react-beautiful-dnd": "^7.1.0",
     "react-dom": "^16.3.2",
     "styled-components": "^3.2.6"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.5.1"
+  }
 }
