--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "@blueprintjs/core": "^2.2.1",
     "@zeit/next-css": "^0.1.5",
     "apollo-boost": "^0.1.4",
+    "array-move": "^1.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.1",
     "isomorphic-unfetch": "^2.0.0",
