--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "graphql-tag": "^2.9.1",
     "nuxt": "^1.0.0",
     "vue-apollo": "^3.0.0-beta.5",
+    "vuedraggable": "^2.16.0",
     "vuetify": "^1.0.17"
   },
   "devDependencies": {
