--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -10,4 +10,6 @@ phases:
     commands:
   post_build:
     commands:
+      - ls server
+      - ls server/node_modules
       - cd server && ENDPOINT=http://$PRISMA_SERVER:4460 ./node_modules/.bin/prisma deploy
